# xian-py

./: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: API_COMPATIBILITY.md  ARCHITECTURE.md  BACKLOG.md  README.md  SDK_REVIEW_BACKLOG.md
examples/: README.md  __init__.py  admin_job.py  event_worker.py  fastapi_service.py
examples/credits_ledger/: README.md  __init__.py  admin_job.py  api_service.py  common.py  event_worker.py  projection.py  projector_worker.py
examples/credits_ledger/contracts/: credits_ledger.s.py
examples/registry_approval/: README.md  __init__.py  admin_job.py  api_service.py  common.py  event_worker.py  projection.py  projector_worker.py
examples/registry_approval/contracts/: registry_approval.s.py  registry_records.s.py
examples/workflow_backend/: README.md  __init__.py  admin_job.py  api_service.py  common.py  event_worker.py  processor_worker.py  projection.py  projector_worker.py
examples/workflow_backend/contracts/: job_workflow.s.py
examples/x402_exact/: README.md  __init__.py  admin_job.py  buyer_client.py  common.py  facilitator_service.py  paid_api_service.py
examples/x402_exact/contracts/: x402_settlement.s.py
src/: README.md
src/xian_py/: README.md  __init__.py  _async_helpers.py  _coercion.py  application_clients.py  async_utils.py  config.py  crypto.py  decompiler.py  encoding.py  exception.py  formating.py  models.py  projectors.py  run_sync.py  shielded_relayer.py  transaction.py  validator.py  wallet.py  x402.py  xian.py  xian_async.py  xian_datetime.py  xian_decimal.py
tests/: README.md
tests/unit/: test_credits_ledger_projection.py  test_crypto.py  test_encoding.py  test_example_submission_helpers.py  test_models.py  test_projectors.py  test_public_api.py  test_registry_approval_projection.py  test_run_sync.py  test_shielded_relayer.py  test_transaction.py  test_validator.py  test_wallet.py  test_workflow_backend_projection.py  test_x402.py  test_xian_clients.py  test_xian_decimal.py
