[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-py"
version = "0.4.8"
description = "Python SDK for interacting with the Xian blockchain"
readme = "README.md"
license = "MIT"
authors = [{ name = "endogen" }]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0,<4",
    "pynacl>=1.5.0,<2",
    "xian-accounts>=0.1.0,<0.2",
    "xian-contract-tools>=0.1.0,<0.2",
    "xian-runtime-types>=0.1.0,<0.2",
]

[project.optional-dependencies]
hd = [
    "bip-utils>=2.9.3,<3",
]
eth = [
    "eth-account>=0.13.4,<0.14",
    "eth-utils>=5.2.0,<6",
]
app = [
    "fastapi>=0.116.0,<0.117",
    "uvicorn>=0.35.0,<0.36",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.6,<0.16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv.sources]
xian-accounts = { path = "../xian-contracting/packages/xian-accounts", editable = true }
xian-contract-tools = { path = "../xian-contracting/packages/xian-contract-tools", editable = true }
xian-runtime-types = { path = "../xian-contracting/packages/xian-runtime-types", editable = true }
