[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-tech-py"
version = "0.4.15"
description = "Python SDK for interacting with the Xian blockchain"
readme = "README.md"
license = "MIT"
authors = [{ name = "endogen" }]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5,<4",
    "pynacl>=1.5.0,<2",
    "xian-tech-accounts>=0.1.0,<0.2",
    "xian-tech-runtime-types>=0.1.0,<0.2",
]

[project.optional-dependencies]
hd = [
    "mnemonic>=0.21,<0.22",
]
eth = [
    "eth-account>=0.13.7,<0.14",
    "eth-utils>=6.0.0,<7",
]
app = [
    "fastapi>=0.136.1,<0.137",
    "uvicorn>=0.46.0,<0.47",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.12,<0.16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv.sources]
xian-tech-accounts = { path = "../xian-contracting/packages/xian-accounts", editable = true }
xian-tech-runtime-types = { path = "../xian-contracting/packages/xian-runtime-types", editable = true }
